--- a/angular.json
+++ b/angular.json
@@ -24,12 +24,13 @@
             ],
             "styles": [
               "src/styles.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": [
               
-              "https://getbootstrap.com/assets/js/vendor/popper.min.js",
-              "./node_modules/jquery/dist/jquery.min.js"
+              "./node_modules/popper.js/dist/popper.js",
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.js"
             ],
             "es5BrowserSupport": true
           },
