--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             ],
             "scripts": [
               
-              "./node_modules/popper.js/dist/popper.js",
+              "./node_modules/popper.js/dist/umd/popper.js",
               "./node_modules/jquery/dist/jquery.js",
               "./node_modules/bootstrap/dist/js/bootstrap.js"
             ],
